// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ErrorView. 1`] = `
<span
  className="text"
>
  Something went wrong...
</span>
`;

exports[`Renders LoadingView. 1`] = `
<span
  className="faded text"
>
  One moment..
</span>
`;

exports[`Renders OptionsView. 1`] = `
<span
  className="optionView"
>
  <span
    className="faded text"
  >
    Select by
  </span>
  <select
    className="bold text"
    onChange={[Function]}
  >
    <option
      selected={false}
    >
      someField, someOther, Another
    </option>
  </select>
</span>
`;

exports[`Renders error FieldSelectView 1`] = `
<div
  className="fieldSelect"
>
  <div
    className="inputBase error"
  >
    <span
      className="text"
    >
      Something went wrong...
    </span>
  </div>
   
</div>
`;

exports[`Renders loaded FieldSelectView 1`] = `
<div
  className="fieldSelect"
>
  <div
    className="inputBase"
  >
    <span
      className="optionView"
    >
      <span
        className="faded text"
      >
        Select by
      </span>
      <select
        className="bold text"
        onChange={[Function]}
      >
        <option
          selected={false}
        >
          someField, someOther, Another
        </option>
      </select>
    </span>
  </div>
   
</div>
`;

exports[`Renders loading FieldSelectView 1`] = `
<div
  className="fieldSelect"
>
  <div
    className="inputBase"
  >
    <span
      className="faded text"
    >
      One moment..
    </span>
  </div>
   
</div>
`;
